--- a/public/500.html
+++ b/public/500.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title>Internal server error 500</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <!-- Connect Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
